--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
+    "js-cookie": "^3.0.5",
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.2",
+    "react-toastify": "^11.0.5",
     "yup": "^1.6.1",
     "zod": "^3.24.3"
   },
@@ -26,6 +28,7 @@
     "@eslint/js": "^9.22.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
